# Aut.-Proposta-

./: .gitignore
aut-proposta/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
aut-proposta/app/api/: main.py
aut-proposta/app/dados/: precos_2026.json
aut-proposta/app/db/: conexao.py  repo_precos.py  repo_propostas.py  schema.py  schema.sql
aut-proposta/app/docx/: formatos.py  gerador.py  pdf.py
aut-proposta/app/docx/timbrado/: TIMBRADO_FLYINGSTUDIO.docx
aut-proposta/app/dominio/: descontos.py  orcamento.py  precos.py  texto.py
aut-proposta/app/historico/: historico.py  orcamento_historico.py
aut-proposta/app/ia/: chat.py  parser.py
aut-proposta/app/servicos/: proposta.py
aut-proposta/app/storage/: r2.py
aut-proposta/scripts/: migrar_catalogo_2026.py  seed_precos.py
aut-proposta/tests/: conftest.py  test_smoke.py
aut-proposta/tests/api/: test_api.py
aut-proposta/tests/db/: test_conexao.py  test_migrar_catalogo_2026.py  test_repo_precos.py  test_repo_propostas.py  test_schema.py  test_seed_precos.py
aut-proposta/tests/docx/: test_formatos.py  test_gerador.py  test_pdf.py
aut-proposta/tests/dominio/: test_descontos.py  test_fechamento.py  test_orcamento.py  test_precos.py  test_texto.py
aut-proposta/tests/historico/: test_orcamento_historico.py
aut-proposta/tests/ia/: test_chat.py  test_parser.py
aut-proposta/tests/servicos/: test_proposta.py
aut-proposta/tests/storage/: test_r2.py
docs/superpowers/plans/: 2026-07-18-plano-1-nucleo-deterministico.md  2026-07-18-plano-2-persistencia-neon-historico.md  2026-07-19-plano-3-docx-ia-api.md  2026-07-19-plano-4-ui-hub.md  2026-07-19-plano-5-chat-consultas-historico.md  2026-07-20-plano-6-catalogo-completo.md
(+1 files in other folders)
