[project]
name = "aut-proposta"
version = "0.1.0"
description = "Automação de Proposta Flying Studio — serviço de precificação e geração de propostas"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
